# Check-It

./: Cargo.toml  README.md  index.html  karin.txt  xepher.txt
deploy/: check_it.js
src/: audio.rs  main.rs  song.rs
