[package]
name = "check_it"
version = "0.1.0"
authors = ["tinym"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = "0.4.0-alpha0.6"
instant = "0.1.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.20"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = "0.13.0"